<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/healthy_foods_white"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/recipe_image"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:scaleType="fitStart"
      app:srcCompat="@drawable/healthy_lifestyle"
      tools:ignore="ContentDescription" />

  <androidx.core.widget.NestedScrollView
      android:id="@+id/login_details_bottom_sheet"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      style="@style/BottomSheetStyle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <View
          android:id="@+id/divider"
          android:layout_width="@dimen/divider_width"
          android:layout_height="@dimen/divider_height"
          android:layout_marginTop="@dimen/view_margin_vertical_double"
          android:background="?attr/colorPrimary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/login_text"
          style="@style/BoldTextStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical_quadraple"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          android:gravity="center_horizontal"
          android:text="@string/login_account"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/divider" />

      <TextView
          android:id="@+id/login_additional_text"
          style="@style/NormalTextStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          android:gravity="center_horizontal"
          android:text="@string/login_additional_text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/login_text" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/email_text_input_layout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical_quadraple"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/login_additional_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/password_text_input_layout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical_double"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
          app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

      <ProgressBar
          android:id="@+id/login_progress_bar"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

      <TextView
          android:id="@+id/progress_message"
          style="@style/NormalTextStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          android:gravity="center_horizontal"
          android:text="@string/progress_dialog_message_login"
          android:textSize="@dimen/small_font_size"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/login_progress_bar" />

      <Button
          android:id="@+id/btn_login"
          style="@style/ButtonStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical_quadraple"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          android:text="@string/login"
          android:textColor="#455A64"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/progress_message" />

      <TextView
          android:id="@+id/link_to_signup"
          style="@style/NormalTextStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_margin_horizontal_default"
          android:layout_marginTop="@dimen/view_margin_vertical"
          android:layout_marginEnd="@dimen/screen_margin_horizontal_default"
          android:gravity="center_horizontal"
          android:text="@string/proceed_to_signup"
          android:textSize="@dimen/small_font_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
