...
  <string name="required_confirm_password_error">Confirm password should match password</string>
  <string name="required_valid_password_error">Password should have at least 8 characters with uppercase, lowercase, digits and special characters</string>
  <string name="failed_registration">Registration failed</string>
  <string name="verification_prompt">Email verification sent</string>
  <string name="successful_authentication">Authentication successful</string>
  <string name="failed_authentication">Authentication failed</string>
  <string name="email_verification_prompt">Please verify your email before proceeding</string>
  <string name="saved">Saved</string>
  <string name="save_recipe">Save recipe</string>
  <string name="logout">Logout</string>
  <string name="progress_dialog_message">Loading…</string>
  <string name="progress_dialog_message_login">Authenticating …</string>
  <string name="progress_dialog_message_signup">Signing up …</string>
...
